# gurmukhi-utils

./: .eslintignore  .eslintrc  .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  MIGRATING.md  Package.swift  README.hbs  README.md  example.js  index.d.ts  index.js  mise.toml  package-lock.json  package.json  release-please-config.json  release.sh  ubrn.config.yaml  uniffi-bindgen-js.rs  uniffi-bindgen-node-js.rs  uniffi.toml  webpack.config.js
.circleci/: config.yml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-native.yml  ci.yml  codeql.yml  deploy.yml  publish.yml  python-bump.yml  python-publish.yml  python-pytest.yml  release.yml
bindings/dart/: CONTRIBUTING.md  pubspec.yaml
bindings/dart/example/: example.dart
bindings/dart/lib/: gurmukhi_utils.dart
bindings/dart/lib/src/: gurmukhi.dart
bindings/dart/test/: gurmukhi_utils_test.dart
bindings/javascript/: .gitignore  .prettierignore  Gurmukhi.podspec  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  tsconfig.rn.json  ubrn.config.yaml
bindings/javascript/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
bindings/javascript/android/src/main/: AndroidManifest.xml
bindings/javascript/android/src/main/java/com/shabados/gurmukhi/: GurmukhiModule.kt  GurmukhiPackage.kt
bindings/javascript/cpp/: gurmukhi.cpp  gurmukhi.h
bindings/javascript/ios/: Gurmukhi.h  Gurmukhi.mm
bindings/javascript/smoke/: native.ts  wasm.ts
bindings/javascript/src/: NativeGurmukhi.ts  index.rn.ts  index.ts  toUnicode.ts
bindings/javascript/test/: guut.ts  toAscii.test.ts  toUnicode.test.ts  toUnicodeAscii.test.ts
bindings/kotlin/: .gitignore  README.md  build.gradle.kts  mise.toml  settings.gradle.kts
bindings/kotlin/smoke/: SmokeTest.kt
bindings/kotlin/src/test/kotlin/: GurmukhiUtilsTest.kt  Guut.kt
bindings/python/: .gitignore  CONTRIBUTING.md  README.md  mise.toml  pyproject.toml  smoke_test.py
bindings/python/gurmukhiutils/: __init__.py  ascii.py  convert.py  remove.py
bindings/python/gurmukhiutils/converters/: guru_latn.py
bindings/python/tests/: guut.py  test_ascii.py  test_remove.py  test_unicode.py  test_unicode_ascii.py
bindings/python/tests/converters/: test_guru_latn.py  test_guru_latn_pa.py
bindings/ruby/: .gitignore  CONTRIBUTING.md  Gemfile  README.md  gurmukhi.gemspec  gurmukhi_utils.gemspec  mise.toml  smoke_test.rb
bindings/ruby/lib/: gurmukhi_utils.rb  remove.rb  unicode.rb
bindings/ruby/spec/: ascii_spec.rb  guut.rb  unicode_ascii_spec.rb
bindings/swift/: .gitignore  Package.swift  README.md
bindings/swift/Tests/GurmukhiUtilsTests/: GurmukhiUtilsTests.swift  Guut.swift
bindings/swift/smoke/: SmokeTest.swift
constants/: README.md  package-lock.json  package.json  tsconfig.json
constants/scripts/: to-json.ts
constants/scripts/to-constants/: generators.ts  index.ts
constants/src/: ascii.jsonc  converters-guru-latn.jsonc  lines.jsonc  unicode.jsonc  vishraams.jsonc
csharp/: README.md
dart/: CONTRIBUTING.md  README.md  pubspec.yaml
dart/example/: example.dart
dart/lib/src/: gurmukhi.dart
dart/lib/src/conversion/: ascii_to_gurmukhi.dart
dart/test/: gurmukhi_test.dart  gurmukhi_utils_test.dart
dart/test/conversion/: ascii_to_gurmukhi_test.dart
docs/: README.md  firstLetters.js.html  global.html  index.html  toUnicode.js.html  transliterate.js.html
javascript/: CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json
javascript/src/: index.ts  toAscii.ts  toUnicode.ts
javascript/test/: globals.js  toAscii.test.js  toAscii.test.ts  toUnicode.test.js  toUnicode.test.ts  toUnicodeAscii.test.js  toUnicodeAscii.test.ts
lib/: accents.json  countSyllables.js  firstLetters.js  isGurmukhi.js  mappings.json  regex-utils.js  shahmukhiMappings.json  stripAccents.js  stripEndings.js  stripVishraams.js  toAkhar.js  toAscii.js  toEnglish.js  toHindi.js  toShahmukhi.js  toSyllabicSymbols.js  toUnicode.js  transliterate.js  unicodeMappings.json  vishraams.json
python/: .flake8  .gitignore  CONTRIBUTING.md  README.md
python/gurmukhiutils/: ascii.py  constants.py  convert.py  remove.py  unicode.py
python/gurmukhiutils/converters/: guru_latn.py  guru_latn_pa.py
python/tests/: globals.py  guut.py  test_ascii.py  test_ascii_unicode_ascii.py  test_remove.py  test_unicode.py  test_unicode_ascii.py
python/tests/converters/: test_guru_latn.py  test_guru_latn_pa.py
ruby/: CONTRIBUTING.md  Gemfile  README.md  Rakefile  gurmukhi_utils.gemspec
ruby/lib/: ascii.rb  constants.rb  gurmukhi_utils.rb  unicode.rb
ruby/spec/: ascii_spec.rb  guut.rb  spec_helper.rb  unicode_ascii_spec.rb  unicode_spec.rb
scripts/: camelcase-exports.ts  flatten-wasm-namespace.ts  patch-enums.ts
src/: ascii.rs  feature.rs  helpers.rs  lib.rs  markup.rs  transcribe.rs  unicode.rs
src/transcribe/: constants.rs
src/transcribe/schemes/: devanagari.rs  latin.rs  latin_scholar.rs  mod.rs
src/unicode/: normalize.rs
test/: README.md  countSyllables.spec.js  firstLetters.spec.js  isGurmukhi.spec.js  remove.json  stripAccents.spec.js  stripEndings.spec.js  stripVishraams.spec.js  toAkhar.spec.js  toAscii.json  toAscii.spec.js  toEnglish.spec.js  toHindi.spec.js  toShahmukhi.spec.js  toSyllabicSymbols.spec.js  toUnicode.json  toUnicode.spec.js  toUnicodeAscii.json  transliterate.spec.js
tests/: ascii.rs  feature.rs  firstLetters.spec.js  markup.rs  toUnicode.spec.js  transcribe.rs  transliterate.spec.js  unicode.rs
