[workspace.package]
version = "0.1.0"
edition = "2024"
description = ""
documentation = ""
license = "MIT"
repository = "https://github.com/shabados/gurmukhi-utils"
authors = []

[workspace.lints]

[package]
name = "gurmukhi-utils"
edition = "2024"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[lib]
name = "gurmukhi_utils"
crate-type = ["rlib", "cdylib", "staticlib"]

[lints]
workspace = true

[dependencies]
const_format = "0.2.34"
once_cell = "1.21.3"
regex = "1.11.2"
uniffi = { version = "0.29", features = [ "cli", "wasm-unstable-single-threaded" ] }
wasm-bindgen = "0.2"


[build-dependencies]
uniffi = { version = "0.29", features = [ "build" ] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
