[workspace.package]
version = "0.1.0"
edition = "2024"
description = ""
documentation = ""
license = "MIT"
repository = "https://github.com/shabados/gurmukhi-utils"
authors = []

[workspace.lints]

[package]
name = "gurmukhi-utils"
edition = "2024"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[[bin]]
name = "uniffi-bindgen-js"
path = "uniffi-bindgen-js.rs"

[[bin]]
name = "uniffi-bindgen-node-js"
path = "uniffi-bindgen-node-js.rs"

[lib]
name = "gurmukhi_utils"
crate-type = ["rlib", "cdylib", "staticlib"]

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
const_format = "0.2.34"
once_cell = "1.21.3"
regex = "1.11.2"
uniffi = { version = "0.31", features = [ "cli", "wasm-unstable-single-threaded" ] }
uniffi-bindgen-js = "0.2.1"
uniffi-bindgen-node-js = "0.0.11"
wasm-bindgen = "0.2"


[build-dependencies]
uniffi = { version = "0.31", features = [ "build" ] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"
