[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gurmukhiutils"
version = "0.3.1"
description = "Python utilities library for converting, analyzing, and testing Gurmukhi strings"
license = "MIT"
authors = ["Bhajneet S.K. <bhajneet@gmail.com>"]
maintainers = ["Bhajneet S.K. <bhajneet@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/shabados/gurmukhiutils"
repository = "https://github.com/shabados/gurmukhiutils"
documentation = "https://github.com/shabados/gurmukhiutils"
keywords = [ "gurbani", "gurmukhi", "sikh", "transliterate", "unicode" ]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Natural Language :: Panjabi",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/shabados/gurmukhiutils/issues"
