[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "gurmukhi"
version = "1.0.0"
description = "Python utilities library for converting, analyzing, and testing Gurmukhi strings"
license = "MIT"
authors = [{ name = "Shabad OS", email = "team@shabados.com" }]
requires-python = ">=3.10"
keywords = ["gurbani", "gurmukhi", "sikh", "transliterate", "unicode"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: Panjabi",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Libraries",
    "Topic :: Text Processing",
]

[project.urls]
Homepage = "https://github.com/shabados/gurmukhi-utils"
Repository = "https://github.com/shabados/gurmukhi-utils"

[tool.setuptools.packages.find]
include = ["gurmukhi"]

[tool.setuptools.package-data]
gurmukhi = ["*.so", "*.dylib", "*.dll"]
